<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>org.jhiccup</groupId>
    <artifactId>jHiccup</artifactId>
    <version>2.0.11-SNAPSHOT</version>

    <name>jHiccup</name>

    <url>http://jhiccup.org</url>

    <description>
        jHiccup is a lightweight, non-intrusive instrumentation tool that logs and records
        platform "hiccups" - including the JVM stalls that often happen when
        Java applications are executed and/or any OS or hardware platform noise
        that may cause the running application to not be continuously runnable.
    </description>

    <licenses>
        <license>
            <comments>
                * This code was Written by Gil Tene of Azul Systems, and released to the
                * public domain, as explained at http://creativecommons.org/publicdomain/zero/1.0/
            </comments>
            <name>Public Domain, per Creative Commons CC0</name>
            <url>http://creativecommons.org/publicdomain/zero/1.0/</url>
        </license>
    </licenses>

    <developers>
        <developer>
            <id>giltene</id>
            <name>Gil Tene</name>
            <url>https://github.com/giltene</url>
        </developer>
    </developers>

    <scm>
        <url>scm:git:git://github.com/bivex/jHiccup.git</url>
        <connection>scm:git:git://github.com/bivex/jHiccup.git</connection>
        <developerConnection>scm:git:git@github.com:bivex/jHiccup.git</developerConnection>
        <tag>HEAD</tag>
    </scm>

    <issueManagement>
        <url>https://github.com/bivex/jHiccup/issues</url>
        <system>GitHub Issues</system>
    </issueManagement>

    <packaging>jar</packaging>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>1.8</maven.compiler.source>
        <maven.compiler.target>1.8</maven.compiler.target>
        <version.template.file>src/main/java/org/jhiccup/Version.java.template</version.template.file>
        <version.file>src/main/java/org/jhiccup/Version.java</version.file>
    </properties>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.1</version>
                <configuration>
                    <source>1.8</source>
                    <target>1.8</target>
                    <encoding>UTF-8</encoding>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.2.5</version>
                <configuration>
                    <enableAssertions>false</enableAssertions>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-dependency-plugin</artifactId>
                <version>3.6.1</version>
                <executions>
                    <execution>
                        <id>copy-dependencies</id>
                        <phase>prepare-package</phase>
                        <goals>
                            <goal>copy-dependencies</goal>
                        </goals>
                        <configuration>
                            <outputDirectory>${project.build.directory}/lib</outputDirectory>
                            <overWriteReleases>false</overWriteReleases>
                            <overWriteSnapshots>false</overWriteSnapshots>
                            <overWriteIfNewer>true</overWriteIfNewer>
                            <excludeArtifactIds>tools</excludeArtifactIds>
                        </configuration>
                    </execution>
                    <execution>
                        <id>copy-installed</id>
                        <phase>install</phase>
                        <goals>
                            <goal>copy</goal>
                        </goals>
                        <configuration>
                            <artifactItems>
                                <artifactItem>
                                    <groupId>${project.groupId}</groupId>
                                    <artifactId>${project.artifactId}</artifactId>
                                    <version>${project.version}</version>
                                    <type>${project.packaging}</type>
                                    <destFileName>jHiccup.jar</destFileName>
                                </artifactItem>
                            </artifactItems>
                            <outputDirectory>${project.basedir}</outputDirectory>
                        </configuration>
                    </execution>
                </executions>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>3.3.0</version>
                <configuration>
                    <finalName>jHiccup</finalName>
                    <archive>
                        <manifest>
                            <addClasspath>false</addClasspath>
                            <mainClass>org.jhiccup.HiccupMeter</mainClass>
                            <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
                            <addDefaultSpecificationEntries>true</addDefaultSpecificationEntries>
                        </manifest>
                        <manifestEntries>
                            <Premain-Class>org.jhiccup.HiccupMeter</Premain-Class>
                            <Agent-Class>org.jhiccup.HiccupMeter</Agent-Class>
                            <Can-Redefine-Classes>true</Can-Redefine-Classes>
                            <Can-Retransform-Classes>true</Can-Retransform-Classes>
                        </manifestEntries>
                    </archive>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.sonatype.plugins</groupId>
                <artifactId>jarjar-maven-plugin</artifactId>
                <version>1.9</version>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>jarjar</goal>
                        </goals>
                        <configuration>
                            <includes>
                                <include>org.hdrhistogram:HdrHistogram</include>
                            </includes>
                            <rules>
                                <rule>
                                    <pattern>org.HdrHistogram.**</pattern>
                                    <result>org.jhiccup.internal.hdrhistogram.@1</result>
                                </rule>
                            </rules>
                            <overwrite>true</overwrite>
                        </configuration>
                    </execution>
                </executions>
            </plugin>

            <plugin>
                <groupId>com.google.code.maven-replacer-plugin</groupId>
                <artifactId>maven-replacer-plugin</artifactId>
                <version>1.4.0</version>
                <executions>
                    <execution>
                        <phase>process-sources</phase>
                        <goals>
                            <goal>replace</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <file>${version.template.file}</file>
                    <outputFile>${version.file}</outputFile>
                    <replacements>
                        <replacement>
                            <token>\$BUILD_TIME\$</token>
                            <value>${maven.build.timestamp}</value>
                        </replacement>
                        <replacement>
                            <token>\$VERSION\$</token>
                            <value>${project.version}</value>
                        </replacement>
                    </replacements>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-assembly-plugin</artifactId>
                <version>3.6.0</version>
                <configuration>
                    <descriptors>
                        <descriptor>src/main/assembly/dist.xml</descriptor>
                    </descriptors>
                </configuration>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>single</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

    <dependencies>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.13.2</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.hdrhistogram</groupId>
            <artifactId>HdrHistogram</artifactId>
            <version>2.1.12</version>
        </dependency>
    </dependencies>

</project>
